# iphreeqc

./: .gitignore  .gitlab-ci.yml  All.2005.sln  All.sln  CMakeLists.txt  CTestConfig.cmake  GNUmakefile  IPhreeqc.2005.sln  IPhreeqc.2005.vcproj  IPhreeqc.2008.vcproj  IPhreeqc.2010.sln  IPhreeqc.2012.vcxproj  IPhreeqc.2012.vcxproj.filters  IPhreeqc.MMS.vcproj  IPhreeqc.MMS.vcxproj  IPhreeqc.MMS.vcxproj.filters  IPhreeqc.cpp  IPhreeqc.i  IPhreeqc.makefile  IPhreeqc.props  IPhreeqc.sln  IPhreeqc.vcproj  IPhreeqc.vcxproj  IPhreeqc.vcxproj.filters  IPhreeqc.vsprops  IPhreeqc71.sln  Makefile  Makefile.am  README  README.md  bootstrap  configure.ac  ctest-shared.cmake  ctest.cmake  jenkins-R-dist.sh  jenkins-dist-build.ps1  jenkins-dist-build.sh  jenkins-dist.sh  vs2008-64.bat  vs2008-64.cmake  (+3 more)
.github/: subtrees.json  superprojects.json
.github/workflows/: cmake.yml  lint-subtrees.yml  lint-superprojects.yml  subtree.yml
R/: CITATION  DESCRIPTION.in  Makefile  Makevars  R.cpp  SE_to_export_03142014.csv  build-csv.R  build-databases.R  build-examples.R  cleanup  leak-Ex.R  phrGetErrorStrings.valgrind-leak.R.in  phreeqc.R.in  roxygenize.R  valgrind.R
R/phreeqc/: .Rbuildignore  CITATION  DESCRIPTION  LICENSE  LICENSE.note  NAMESPACE
advect/: CMakeLists.txt  Makefile  README.txt  advect.F90  advect.c  advect.f90  advect.sln  advect.vfproj  advect_c.vcproj
advect_f/: advect.sln
all/fortran/: advect.vfproj
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  IPhreeqc.hhp  Makefile  Makefile.am  TOC.hhc  parse.py
doc/examples/: AccumulateLine.c  CreateIPhreeqc.c  DestroyIPhreeqc.c  F90AccumulateLine.f90  F90ClearAccumulatedLines.f90  F90CreateIPhreeqc.f90  F90DestroyIPhreeqc.f90  F90GetComponent.f90  F90GetDumpLine.f90  F90GetDumpStringLine.f90  F90GetErrorStringLine.f90  F90GetLogStringLine.f90  F90GetOutputStringLine.f90  F90GetSelectedOutputStringLine.f90  F90GetSelectedOutputValue.f90  F90GetVersionString.f90  F90SetBasicCallback.f90  F90SetBasicFortranCallback.f90  GetComponent.c  GetDumpString.c  GetErrorString.c  GetOutputString.c  GetSelectedOutputString.c  GetSelectedOutputValue.c  GetSelectedOutputValue2.c  IPhreeqc.cpp  Makefile  Multi.cpp  SetBasicCallback.c  SetCurrentSelectedOutputUserNumber.c  ic  multi_punch
examples/: CMakeLists.txt  Makefile.am  Makefile.in  test_c.c.in  test_cxx.cxx.in  test_f.f.in  test_f90.f90.in
examples/c/: .gitlab-ci.yml
examples/com/: .gitlab-ci.yml
examples/fortran/: .gitlab-ci.yml
examples/java/: CMakeLists.txt  main.java
examples/swig/java/: CMakeLists.txt  advect.java  callback.java  example.java
examples/swig/python/: CMakeLists.txt  advect.py  callback.py  example.py
examples/using-cmake/: CMakeLists.txt  CMakeLists.txt.in  README.txt  main.cpp  post-install.cmake.in
excel/: README.txt  runphreeqc.xls  runphreeqc_1.xls  runphreeqc_3.xlsm  withcallback.xls
gtest/: CMakeLists.txt  FileTest.cpp  TestIPhreeqc-Ex-R.cpp  TestIPhreeqc.cpp  TestIPhreeqcLib.cpp
include/: IPhreeqc.f.inc  IPhreeqc.f90.inc  IPhreeqc.h  IPhreeqc.hpp  IPhreeqc2.h  IPhreeqcLib.h  Var.h
memory_leak_f/: memory_leak_f.vfproj  test_memory_leak.f90
phreeqcpp/common/: Utils.cxx
python/: parallel_advect.py
src/: BasicCallback.h  IPhreeqc.cpp  IPhreeqc.h  IPhreeqc.hpp  IPhreeqc.i  IPhreeqcF.F  IPhreeqcLib.cpp  IPhreeqc_interface_F.cpp  Makefile.am  Var.h
src/.github/: subtrees.json
src/phreeqcpp/: Phreeqc.h  basicsubs.cpp
test/: GNUmakefile  Makefile.am  kinn.f  kinn.for  test.dsp  test.vfproj
test2/: test2.for  test2.vfproj
test5/: test5.c
test_ieee/: test_ieee.f90  test_ieee.vfproj
testcpp/: Makefile.am  testcpp.cpp  testcpp.vcproj
tests/: CMakeLists.txt  Makefile.am  Makefile.in  ex1.in  main_fortran.cxx  test_c.2008.vcproj  test_c.c  test_c.vcproj  test_cxx.2008.vcproj  test_cxx.cxx  test_cxx.vcproj  test_f.2008.vfproj  test_f.f  test_f.vfproj  test_f90.2008.vfproj  test_f90.F90  test_f90.f90  test_f90.vfproj
trunk/: All.2005.sln  IPhreeqc.2005.sln  IPhreeqc.2005.vcproj  IPhreeqc.2008.sln  IPhreeqc.2008.vcproj  IPhreeqc.2012.sln  IPhreeqc.2012.vcxproj  IPhreeqc.2012.vcxproj.filters  IPhreeqc.MMS.vcproj  IPhreeqc.MMS.vcxproj.filters  IPhreeqc.dsp  IPhreeqc.dsw  IPhreeqc.makefile  IPhreeqc.props  IPhreeqc.vcproj  IPhreeqc.vcxproj  IPhreeqc.vcxproj.filters  IPhreeqc71.vcproj  Makefile.am  configure.ac
trunk/R/: DESCRIPTION.in  build-csv.R  cleanup  phrGetErrorStrings.valgrind-leak.R.in
trunk/doc/: Doxyfile  Makefile  Makefile.am  TOC.hhc
trunk/doc/examples/: AccumulateLine.c  F90ClearAccumulatedLines.f90  F90DestroyIPhreeqc.f90  F90GetDumpStringLine.f90  F90GetErrorStringLine.f90  F90GetSelectedOutputStringLine.f90  F90GetVersionString.f90  GetComponent.c  GetErrorString.c  GetLogString.c  GetSelectedOutputValue.c  GetVersionString.c  IPhreeqc.cpp  Makefile  ex2
trunk/examples/: Makefile.am
trunk/include/: IPhreeqc.f.inc  IPhreeqc.hpp
trunk/memory_leak_f/: init.f90  memory_leak_f.vfproj  test_memory_leak.f90  test_memory_leak.pqi
trunk/src/: IPhreeqc.cpp
trunk/test/: Makefile.am  kinn.f
trunk/test2/: CO2test  Makefile  makelist  test2.dsp  test2.f  test2.for  tester
trunk/test5/: Makefile
trunk/test_ieee/: IEEE  ReadMe.txt
trunk/testcpp/: testcpp.vcproj
trunk/tests/: test_c.2008.vcproj  test_c.vcproj  test_cxx.2008.vcproj  test_cxx.vcproj  test_f.2008.vfproj  test_f.f  test_f.vfproj  test_f90.f90  test_f90.vfproj
trunk/unit/: .cvsignore  GNUmakefile  Makefile.am  TestCVar.cpp  TestCVar.h  TestIPhreeqc.cpp  TestIPhreeqc.h  TestIPhreeqcLib.cpp  TestIPhreeqcLib.h  TestInterface.cpp  TestSelectedOutput.cpp  TestSelectedOutput.h  TestVar.h  configure.ac  kinn20140218  unit.2010.sln  unit.cpp  unit.dsp  unit.dsw  unit.vcproj  unit.vcxproj  unit.vcxproj.filters
unit/: FileTest.cpp  FileTest.h  GNUmakefile  Makefile.am  TestIPhreeqc.cpp  TestIPhreeqc.h  TestIPhreeqcLib.cpp  TestIPhreeqcLib.h  TestInterface.cpp  TestInterface.h  TestSelectedOutput.cpp  TestSelectedOutput.h  TestVar.cpp  TestVar.h  configure.ac  multi_punch_no_set  unit.cpp  unit.sln  unit.vcproj  unit.vcxproj  unit.vcxproj.filters
(+134 files in other folders)
