# Additional files to distribute.
###EXTRA_DIST = ChangeLog.O gnulib/m4/gnulib-cache.m4
EXTRA_DIST = lib/libiphreeqc.a include/IPhreeqc2.h include/IPhreeqcCallbacks.h include/IPhreeqc.f90.inc include/IPhreeqc.f.inc include/IPhreeqc.h include/IPhreeqc.hpp include/IPhreeqcLib.h include/Var.h

# Subdirectories to descend into.
###SUBDIRS = contrib gnulib/lib po src doc man tests
SUBDIRS = src test testcpp
