# Docs
#
docdir = $(datadir)/doc/$(PACKAGE_TARNAME)-$(VERSION)/html

dist_doc_DATA = $(DOCS)

DOCS= \
    RELEASE \
    PHREEQCPP-RELEASE \
    html/globals_eval.html \
    html/tabs.css \
    html/globals.html \
    html/structVAR.html \
    html/doxygen.css \
    html/closed.png \
    html/classIPhreeqcStop.html \
    html/IPhreeqc_8h_source.html \
    html/doxygen.png \
    html/functions_vars.html \
    html/classes.html \
    html/globals_func.html \
    html/tab_b.png \
    html/functions_func.html \
    html/nav_f.png \
    html/tab_s.png \
    html/IPhreeqc_8hpp.html \
    html/globals_enum.html \
    html/files.html \
    html/bc_s.png \
    html/IPhreeqc_8hpp_source.html \
    html/classIPhreeqc.html \
    html/Var_8h.html \
    html/annotated.html \
    html/IPhreeqc_8h.html \
    html/tab_a.png \
    html/functions.html \
    html/index.html \
    html/tab_h.png \
    html/nav_h.png \
    html/open.png \
    html/Var_8h_source.html
